--- a/profile/index.html
+++ b/profile/index.html
@@ -16,7 +16,7 @@
         <img src="./images/IMG_4486 copy.jpg" width="100px"
       class="img-circle photo" alt="Deborah Reis">
       <p> I'm a programming student at Le Wagon 👩🏻‍💻. I'm from Rio de Janeiro -
-        Brazil ☀️ and i've been living in London 🌧 for 5 years.
+        Brazil ☀️ and i've been living in London 🌧 for 5 years...
       </p>
       </div>
 
